--- a/Biblioteca/cadastro.html
+++ b/Biblioteca/cadastro.html
@@ -1,54 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastre-se aqui</title>
-    <link rel="stylesheet" href="cadastro.css">
-    <link rel="stylesheet" href="cadastro.html">
+	<title>Login</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href="cadastro.css">
 </head>
 <body>
-    <main>
-        <h1>Cadastro</h1>
-        <div class="social-media">
-            <a href="https://mail.google.com/mail/u/0/#inbox">
-                <img src="imagens.png/google.png" alt="Google">
-            </a>
-            <a href="https://pt-br.facebook.com/login/device-based/regular/login/">
-                <img src="imagens.png/facebook.png" alt="Facebook">
-            </a>
-            <a href="https://br.linkedin.com/">
-                <img src="imagens.png/linkedin.png" alt="Linkedin">
-            </a>
-        </div>
+	
+	<div class="container">
+		<div class="container-login">
+			<div class="wrap-login">
+				<form class="login-form">
+					<span class="login-form-title">
+						Faça o login
+					</span>
 
-        <div class="alternative">
-            <span>OR</span>
-        </div>
+					<div class="wrap-input margin-top-35 margin-bottom-35">
+						<input class="input-form" type="text" name="email" autocomplete="off">
+						<span class="focus-input-form" data-placeholder="E-mail"></span>
+					</div>
 
-        <form action="">
-            <label for="name">
-                <span>Name</span>
-                <input type="text" id="name" name="name">
-            </label>
+					<div class="wrap-input margin-bottom-35">
+						<input class="input-form" type="password" name="password">
+						<span class="focus-input-form" data-placeholder="Senha"></span>
+					</div>
 
-            <label for="email">
-                <span>E-mail</span>
-                <input type="email" id="email" name="email">
-            </label>
+					<div class="container-login-form-btn">
+						<button class="login-form-btn">
+							Login
+						</button>
+					</div>
 
-            <label for="password">
-                <span>Password</span>
-                <input type="password" id="password" name="password">
-            </label>
+					<ul class="login-utils">
+						<li class="margin-bottom-8 margin-top-8">
+							<span class="text1">
+								Esqueceu sua
+							</span>
 
-            <input type="submit" value="Sign Up" id="button">
-        </form>
-    </main>
-    <section class="images">
-        <img src="imagens.png/final.png" alt="Mobile">
-        <div class="circle"></div>
-    </section>
+							<a href="#" class="text2">
+								senha?
+							</a>
+						</li>
+
+						<li>
+							<span class="text1">
+								Não tem conta?
+							</span>
+
+							<a href="#" class="text2">
+								Criar
+							</a>
+						</li>
+					</ul>
+				</form>
+			</div>
+			<img src="imagens.png/login.png" width="300" height="300" class="margin-left-50" />
+		</div>
+	</div>
+	
+	<script>
+		let inputs = document.getElementsByClassName('input-form');
+		for (let input of inputs) {
+			input.addEventListener("blur", function() {
+				if(input.value.trim() != ""){
+					input.classList.add("has-val");
+				} else {
+					input.classList.remove("has-val");
+				}
+			});
+		}
+	</script>
+
 </body>
 </html>
