--- a/Biblioteca/login.html
+++ b/Biblioteca/login.html
@@ -8,6 +8,7 @@
         body{
             font-family: Arial, Helvetica, sans-serif;
             background-image: linear-gradient(45deg, rgb(116, 124, 124), rgb(93, 93, 83));
+            
         }
         div{
             background-color: rgba(0,0,0,0.8);
@@ -30,12 +31,13 @@
             padding: 15px;
             border-radius: 15px;
         }
+
     </style>
     </head>
 </head>
 <body>
     <div>
-    <h1>login</h1>
+    <h1>Login</h1>
     <input type="text" placeholder="Usuario">
     <br><br> 
     <input type="password" placeholder="Senha">
